# QVMDecompiler

./: LICENSE  README.md  pyproject.toml  server.py
qvm_decompiler/: __main__.py  ast.py  cfg.py  decompile.py  graph.py  opcode.py  pretty_printer.py  qvm.py
static/: index.html  index.js  style.css
