[tool.poetry]
name = "qvm_decompiler"
version = "0.0.1"
description = "TODO: Fill me (maybe \"infringing on other people's intellectual property is illegal\"?)"
authors = ["Josh Steffen <josh@joshsteffen.com>", "Krishna Ravishankar <krishna.ravi732@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
